# ElfHook

./: .gitignore  Android.mk  CMakeLists.txt  Makefile  README.md  build.sh  config.mk
Demo/app/src/main/java/com/wadahana/testhook/: ElfHooker.java  MainActivity.java
src/: elf_common.cc  elf_common.h  elf_file.cc  elf_file.h  elf_hooker.cc  elf_hooker.cpp  elf_hooker.h  elf_log.h  elf_mapped.cc  elf_mapped.h  elf_module.cc  elf_module.cpp  elf_module.h  elf_soinfo.h  main.cc  main.cpp
